<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" tools:ignore="MissingTranslation">
    <string name="ime_name">AnySoftKeyboard</string>
    <string name="debug_tracing_starting">Tracing started!\nMake sure you stop it at some point
    </string>
    <string name="debug_tracing_starting_failed">Tracing initiating failed! Check logcat for
        details.
    </string>
    <string name="debug_tracing_finished">Tracing finished!\nTrace file is
        <xliff:g id="trace_file">%s</xliff:g>
    </string>
    <string name="menu_about_item">About</string>
    <string name="how_to_pointer_title">Welcome to AnySoftKeyboard</string>
    <string name="change_log_card_version_title_template">\u0020\u0020Latest changes for v<xliff:g id="name">%s</xliff:g>\u0020\u0020
    </string>
    <string name="power_saving_keyboard_theme_name">Power-Saving mode theme</string>
    <string name="power_saving_keyboard_theme_description">Dark colors, simple layout which may require less power from the device.</string>
    <string name="use_custom_sound_volume">Set custom volume</string>
    <string name="use_custom_sound_volume_on_summary">Sounds effects volume is custom.</string>
    <string name="use_custom_sound_volume_off_summary">Sounds effects volume is the system\'s notifications volume.</string>
    <string name="custom_sound_volume">Custom key-press volume</string>
    <string name="hide_soft_when_physical">Hide keyboard on physical key</string>
    <string name="hide_soft_when_physical_on_summary">Hide soft keyboard when physical keyboard is
        used
    </string>
    <string name="hide_soft_when_physical_off_summary">Show soft keyboard when physical keyboard is
        used
    </string>
    <string name="fullscreen_input_connection_supported">Use full-screen editor in landscape
    </string>
    <string name="fullscreen_input_connection_supported_on_summary">Take over the screen when
        entering text in landscape
    </string>
    <string name="fullscreen_input_connection_supported_off_summary">Do not use full-screen editor
        in landscape
    </string>
    <string name="fullscreen_portrait_input_connection_supported">Use full-screen editor in
        portrait
    </string>
    <string name="fullscreen_portrait_input_connection_supported_on_summary">Take over the screen when entering text in portrait</string>
    <string name="fullscreen_portrait_input_connection_supported_off_summary">Do not use full-screen editor in portrait</string>
    <string name="backword_support">Back-word support</string>
    <string name="backword_support_on_summary">Shifted Backspace will delete the last word</string>
    <string name="backword_support_off_summary">Shifted Backspace will delete the last character</string>
    <string name="always_use_fallback_user_dictionary">Use fallback User-dictionary</string>
    <string name="always_use_fallback_user_dictionary_on_summary">Use only AnySoftKeyboard\'s built-in User-dictionary mechanism (not recommended).</string>
    <string name="always_use_fallback_user_dictionary_off_summary">Try to use Android\'s built-in User-dictionary first (recommended).</string>
    <string name="tweaks_group">Tweaks</string>
    <string name="tweak_sound_group">Sound related tweaks</string>
    <string name="tweak_physical_keyboard_group">Physical keyboard tweaks</string>
    <string name="tweak_ui_group">Graphical tweaks</string>
    <string name="tweak_ux_group">Behavior tweaks</string>
    <string name="supported_keyboard_row_modes_title">Enabled specialized input-field modes</string>
    <string name="supported_keyboard_row_modes_summary">Pick specialized input-field (such as
        password, URL, etc.) rows to use.
    </string>
    <string name="tweak_dictionary_group">Dictionary tweaks</string>
    <string name="settings_min_length_for_word_correction">Minimum word length for correction
    </string>
    <string name="is_sticky_extesion_keyboard">Make Top-Extension keyboard sticky</string>
    <string name="is_sticky_extesion_keyboard_on_summary">Stays visible until explicitly closed
    </string>
    <string name="is_sticky_extesion_keyboard_off_summary">Closes after key press</string>
    <string name="show_keyboard_icon_in_status_bar_title">Show keyboard icon in status-bar</string>
    <string name="show_keyboard_icon_in_status_bar_on_summary">Shows the keyboard icon in the device
        status bar.
    </string>
    <string name="show_keyboard_icon_in_status_bar_off_summary">No status-bar icon.</string>
    <string name="is_extesion_keyboard_above_keyboard">Use Top-Extension keyboard</string>
    <string name="show_settings_app_in_launcher">Settings app</string>
    <string name="settings_key_show_settings_app_on_summary">Settings app will be visible in the
        launcher (may require reboot)
    </string>
    <string name="settings_key_show_settings_app_off_summary">Hide Settings app (may require
        reboot)
    </string>
    <string name="always_hide_language_key">Always hide language-key</string>
    <string name="always_hide_language_key_on_summary">Will never show the language-key. Gestures
        will still support layout switching.
    </string>
    <string name="always_hide_language_key_off_summary">Will show language-key only if multiple
        layouts are enabled.
    </string>
    <string name="show_crash_notification">Report on crash</string>
    <string name="show_crash_notification_on_summary">Upon ASK crash, open crash report dialog
    </string>
    <string name="show_crash_notification_off_summary">Silently absorb crashes</string>
    <string name="use_keyrepeat">Use key repeat</string>
    <string name="use_keyrepeat_on_summary">Key repeat is enabled</string>
    <string name="use_keyrepeat_off_summary">Key repeat is disabled</string>
    <string name="default_domain_text">Domain text</string>
    <string name="insert_space_after_word_suggestion_selection">Space after candidate pick</string>
    <string name="insert_space_after_word_suggestion_selection_on_summary">Insert space after word
        suggestion select
    </string>
    <string name="insert_space_after_word_suggestion_selection_off_summary"/>
    <string name="cycle_all_symbols_keyboards">Cycle through all symbols</string>
    <string name="cycle_all_symbols_keyboards_on_summary">Symbols key will cycle through all symbols keyboards.</string>
    <string name="cycle_all_symbols_keyboards_off_summary">Symbols key will only show main symbols keyboard.</string>
    <string name="lang_key_shows_popup">Language switch by popup</string>
    <string name="lang_key_shows_popup_on_summary">Language key will pop-up a selection dialog</string>
    <string name="lang_key_shows_popup_off_summary">Language key will cycle languages</string>
    <string name="top_generic_row_group">Common top generic row</string>
    <string name="top_generic_row_summary">Selected top row: %s</string>
    <string name="bottom_generic_row_group">Common bottom generic row</string>
    <string name="bottom_generic_row_summary">Selected bottom row: %s</string>
    <string name="dark_plain_keyboard_theme_name">Plain dark theme</string>
    <string name="dark_plain_keyboard_theme_description">Dark colors, simple graphics</string>
    <string name="light_plain_keyboard_theme_name">Plain light theme</string>
    <string name="light_plain_keyboard_theme_description">Light colors, simple graphics</string>
    <string name="blacktheme_keyboard_theme_name">Simple black glow</string>
    <string name="blacktheme_keyboard_theme_description">Simple black theme with color highlights
    </string>
    <string name="lean_dark_keyboard_theme_name">Lean Dark</string>
    <string name="lean_dark_keyboard_theme_description">Dark theme, with minimal UI elements
    </string>
    <string name="lean_dark_2_keyboard_theme_name">Lean Dark - Option 2</string>
    <string name="lean_dark_big_keyboard_theme_name">Lean Dark - Large Keys</string>
    <string name="lean_dark_big_keyboard_theme_description">Same Dark theme, but with larger keys
    </string>
    <string name="lean_light_keyboard_theme_name">Lean Light</string>
    <string name="lean_light_keyboard_theme_description">Light theme, with minimal UI elements
    </string>
    <string name="lean_light_2_keyboard_theme_name">Lean Light - Option 2</string>
    <string name="lean_light_big_keyboard_theme_name">Lean Light - Large Keys</string>
    <string name="lean_light_big_keyboard_theme_description">Same Light theme, but with larger
        keys
    </string>
    <string name="lean_dark_gray_keyboard_theme_name">Lean Dark Gray</string>
    <string name="lean_dark_gray_keyboard_theme_description">Dark Gray theme, with minimal UI
        elements
    </string>
    <string name="yochees_dark_keyboard_theme_name">Yochees Dark</string>
    <string name="yochees_dark_keyboard_theme_description">Dark theme by Algimantas.</string>
    <string name="yochees_dark_2_keyboard_theme_name">Yochees Dark - Option 2</string>
    <string name="yochees_light_keyboard_theme_name">Yochees Light</string>
    <string name="yochees_light_keyboard_theme_description">Light theme by Algimantas.</string>
    <string name="yochees_dark_keyboard_theme_upper_description">Light theme by Algimantas with
        uppercase keys.
    </string>
    <string name="multitap_timeout_title">Multi-tap timeout</string>
    <string name="multitap_timeout_summary">Timeout between key taps</string>
    <string name="long_press_timeout_title">Long-press time</string>
    <string name="long_press_timeout_summary">Key press time to be considered as long-press</string>
    <string name="settings_force_locale_title">Force Locale</string>
    <string name="settings_force_locale_summary">Force locale used inside AnySoftKeyboard (takes
        awhile to take affect). Currently: %s.
    </string>
    <string name="tweak_workarounds_group">Workarounds</string>
    <string name="workaround_disable_rtl_fix">Use Android\'s Right-to-Left handling</string>
    <string name="workaround_disable_rtl_fix_summary_on">Use OS RTL handling. Should work fine on
        newer devices.
    </string>
    <string name="workaround_disable_rtl_fix_summary_off">Use AnySoftKeyboard RTL handling. Should
        only be used if OS fails to do RTL.
    </string>
    <string name="settings_split_state_title_portrait">Portrait Split/Merge initial state</string>
    <string name="settings_split_state_title_landscape">Landscape Split/Merge initial state</string>
    <string name="settings_split_state_summary">Define whether the keyboard is split as default.
        Now: %s
    </string>
    <string name="click_for_developer_features">Developer tools</string>
    <string name="click_for_developer_features_summary">Various tools for AnySoftKeyboard
        developers
    </string>
    <string name="word_editor_action_backup_words">Backup</string>
    <string name="word_editor_action_restore_words">Restore</string>
    <string name="extension_keyboard_enabled_off_summary">Extension keyboard disabled.</string>
    <string name="extension_keyboard_enabled_on_summary">Extension keyboard will be shown when swiping up above the keyboard.</string>
    <string name="keyboard_for_url_fields">Layout for URL fields</string>
    <string name="keyboard_for_url_fields_summary">When in URL/Email fields, this layout will be used. Currently, %s</string>
    <string name="keyboard_for_url_fields_title">Select layout for URL input</string>
    <string name="allow_layouts_to_provide_generic_rows">Keyboards can provide generic rows</string>
    <string name="allow_layouts_to_provide_generic_rows_off_summary">Always use selected generic rows.</string>
    <string name="allow_layouts_to_provide_generic_rows_on_summary">Allow layouts to override generic rows.</string>
</resources>