<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:pp="http://schemas.android.com/apk/res-auto"
                  android:key="tweaks_group_screen"
                  android:title="@string/tweaks_group">

    <android.support.v7.preference.PreferenceCategory
        android:key="tweak_dictionary_group"
        android:title="@string/tweak_dictionary_group">

        <!-- Using this import require an Android Library reference from https://github.com/menny/PushingPixels -->
        <net.evendanan.pixel.SlidePreference
            android:defaultValue="@integer/settings_default_min_length_for_word_correction"
            android:key="@string/settings_key_min_length_for_word_correction__"
            pp:slideMaximum="@integer/settings_min_length_for_word_correction_max_value"
            android:persistent="true"
            android:title="@string/settings_min_length_for_word_correction"
            pp:slideMinimum="@integer/settings_min_length_for_word_correction_min_value"/>

        <android.support.v7.preference.CheckBoxPreference
            android:key="@string/settings_key_always_use_fallback_user_dictionary"
            android:title="@string/always_use_fallback_user_dictionary"
            android:persistent="true"
            android:defaultValue="@bool/settings_default_always_use_fallback_user_dictionary"
            android:summaryOn="@string/always_use_fallback_user_dictionary_on_summary"
            android:summaryOff="@string/always_use_fallback_user_dictionary_off_summary"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="tweak_physical_keyboard_group"
        android:title="@string/tweak_physical_keyboard_group">

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="use_keyrepeat"
            android:persistent="true"
            android:summaryOff="@string/use_keyrepeat_off_summary"
            android:summaryOn="@string/use_keyrepeat_on_summary"
            android:title="@string/use_keyrepeat"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_hide_soft_when_physical"
            android:key="@string/settings_key_hide_soft_when_physical"
            android:persistent="true"
            android:summaryOff="@string/hide_soft_when_physical_off_summary"
            android:summaryOn="@string/hide_soft_when_physical_on_summary"
            android:title="@string/hide_soft_when_physical"/>
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="tweak_ux_group"
        android:title="@string/tweak_ux_group">

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="true"
            android:key="insert_space_after_word_suggestion_selection"
            android:persistent="true"
            android:summaryOff="@string/insert_space_after_word_suggestion_selection_off_summary"
            android:summaryOn="@string/insert_space_after_word_suggestion_selection_on_summary"
            android:title="@string/insert_space_after_word_suggestion_selection"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_cycle_all_symbols"
            android:key="@string/settings_key_cycle_all_symbols"
            android:persistent="true"
            android:summaryOff="@string/cycle_all_symbols_keyboards_off_summary"
            android:summaryOn="@string/cycle_all_symbols_keyboards_on_summary"
            android:title="@string/cycle_all_symbols_keyboards"/>

        <android.support.v7.preference.CheckBoxPreference
            android:defaultValue="@bool/settings_default_use_backword"
            android:key="@string/settings_key_use_backword"
            android:persistent="true"
            android:summaryOff="@string/backword_support_off_summary"
            android:summaryOn="@string/backword_support_on_summary"
            android:title="@string/backword_support"/>

        <android.support.v7.preference.ListPreference
            android:defaultValue="@string/settings_default_keyboard_id"
            android:dialogTitle="@string/keyboard_for_url_fields_title"
            android:key="@string/settings_key_layout_for_internet_fields"
            android:summary="@string/keyboard_for_url_fields_summary"
            android:title="@string/keyboard_for_url_fields"/>
    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>