<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="prefs_addons_screen">

    <Preference
        android:key="settings_key_ext_kbd_top_row_key"
        android:persistent="false"
        android:summary="@string/top_generic_row_summary"
        android:title="@string/top_generic_row_group" />

    <Preference
        android:key="settings_key_ext_kbd_bottom_row_key"
        android:persistent="false"
        android:summary="@string/bottom_generic_row_summary"
        android:title="@string/bottom_generic_row_group" />

    <android.support.v7.preference.CheckBoxPreference
        android:defaultValue="@bool/settings_default_allow_layouts_to_provide_generic_rows"
        android:key="@string/settings_key_allow_layouts_to_provide_generic_rows"
        android:persistent="true"
        android:summaryOff="@string/allow_layouts_to_provide_generic_rows_off_summary"
        android:summaryOn="@string/allow_layouts_to_provide_generic_rows_on_summary"
        android:title="@string/allow_layouts_to_provide_generic_rows" />

    <Preference
        android:key="settings_key_supported_row_modes"
        android:persistent="false"
        android:summary="@string/supported_keyboard_row_modes_summary"
        android:title="@string/supported_keyboard_row_modes_title" />

    <Preference
        android:key="@string/tweaks_group_key"
        android:title="@string/tweaks_group" />
</android.support.v7.preference.PreferenceScreen>